igualando as três telas

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title>Pokedex website</title>
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="/" id="navbar__logo">Pokedex</a>
+      <a href="index.html" id="navbar__logo">Pokedex</a>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -32,6 +34,6 @@
       </ul>
     </div>
   </nav>
-  <script src="/app.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
