pokemon cards add

--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head> 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Pokedex website</title>
-  <link rel="stylesheet" href="styles/styles.css" />
-</head>
-<body>
-  <nav class="navbar">
-    <div class="navbar__container">
-      <a href="index.html" id="navbar__logo">Pokedex</a>
-      <div class="navbar__toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-      <ul class="navbar__menu">
-        <li class="navbar__item">
-          <a href="index.html" class="navbar__links">
-            Home
-          </a>
-        </li>
-        <li class="navbar__item">
-          <a href="screens/geracoes.html" class="navbar__links">
-            Gerações
-          </a>
-        </li>
-        <li class="navbar__item">
-          <a href="screens/tipo.html" class="navbar__links">
-            Tipos
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <script src="scripts/app.js"></script>
-</body>
+    <head> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Pokedex website</title>
+        <link rel="stylesheet" href="styles/styles.css" />
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="navbar__container">
+                <a href="index.html" id="navbar__logo">Pokedex</a>
+                <div class="navbar__toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="index.html" class="navbar__links">
+                            Home
+                        </a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="screens/geracoes.html" class="navbar__links">
+                        Gerações
+                        </a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="screens/tipo.html" class="navbar__links">
+                            Tipos
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="welcome">    
+            <h>BEM VINDO</h1>
+            <p>Aqui nesse site você encontra todos os pokemons existentes separados por geração ou por tipo</p> 
+            <div>    
+                <img id="image" src="images/pokebola.png" alt="Uma pokebola">
+            </div>
+        </div>    
+    </body>
 </html>
