--- a/screens/geracoes.html
+++ b/screens/geracoes.html
@@ -34,5 +34,7 @@
               </ul>
             </div>
           </nav>
+          <div id="poke_container" class="poke-container"></div>
+          <script src="../scripts/getPokemons.js"></script>
     </body>
 </html>
