Added filter pokemon for type

--- a/screens/tipo.html
+++ b/screens/tipo.html
@@ -34,7 +34,9 @@
               </ul>
             </div>
           </nav>
+          <div id="botao"></div>
           <div id="poke_container" class="poke-container"></div>
+    
           <script src="../scripts/getPokemons.js"></script>
     </body>
 </html>
