trying to add pokemonByGen

--- a/screens/geracoes.html
+++ b/screens/geracoes.html
@@ -34,7 +34,8 @@
               </ul>
             </div>
           </nav>
+          <div id="botao"></div>
           <div id="poke_container" class="poke-container"></div>
-          <script src="../scripts/getPokemons.js"></script>
+          <script src="../scripts/getPokemonbyGen.js"></script>
     </body>
 </html>
