--- a/screens/tipo.html
+++ b/screens/tipo.html
@@ -37,6 +37,6 @@
           <div id="botao"></div>
           <div id="poke_container" class="poke-container"></div>
     
-          <script src="../scripts/getPokemons.js"></script>
+          <script src="../scripts/getPokemonsByType.js"></script>
     </body>
 </html>
